export const snapshot = {};

snapshot[`input prompt > should enter some text 1`] = `
stdout:
"? Whats your name? (foo) » \\x1b[28G\\x1b[G\\x1b[0J
? Whats your name? (foo) » foo bar\\x1b[35G\\x1b[G\\x1b[0J
? Whats your name? (foo) » foo bar
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`input prompt with suggestions > should enable suggestions and list 1`] = `
stdout:
"? Whats your name? (foo) » 
  foo
  bar
  baz\\x1b[3A\\x1b[28G\\x1b[G\\x1b[0J
? Whats your name? (foo) » foo
❯ foo\\x1b[1A\\x1b[31G\\x1b[G\\x1b[0J
? Whats your name? (foo) » foo
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`input prompt > should fuzzy match suggestions in the default search mode 1`] = `
stdout:
"? Choose a color » 
  Abbey
  Aqua
  Other
ℹ 0/3 Next: ↑, Previous: ↓, Next Page: ⇞, Previous Page: ⇟, Complete: ⇥, Submit: ↵\\x1b[4A\\x1b[20G\\x1b[G\\x1b[0J
? Choose a color » abbyy
❯ Abbey
ℹ 1/1 Next: ↑, Previous: ↓, Next Page: ⇞, Previous Page: ⇟, Complete: ⇥, Deselect: escape, Submit: ↵\\x1b[2A\\x1b[24G\\x1b[G\\x1b[0J
? Choose a color » Abbey
❯ Abbey
ℹ 1/1 Next: ↑, Previous: ↓, Next Page: ⇞, Previous Page: ⇟, Complete: ⇥, Deselect: escape, Submit: ↵\\x1b[2A\\x1b[25G\\x1b[G\\x1b[0J
? Choose a color » Abbey
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`input prompt > should restrict suggestions with searchMode substring 1`] = `
stdout:
"? Choose a color » 
  Abbey
  Aqua
  Other
ℹ 0/3 Next: ↑, Previous: ↓, Next Page: ⇞, Previous Page: ⇟, Complete: ⇥, Submit: ↵\\x1b[4A\\x1b[20G\\x1b[G\\x1b[0J
? Choose a color » abby
Submit: ↵\\x1b[1A\\x1b[24G\\x1b[G\\x1b[0J
? Choose a color » abby
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`input prompt > should accept the highlighted suggestion on submit when list is enabled 1`] = `
stdout:
"? Whats your name? » 
  foo
  bar
  baz\\x1b[3A\\x1b[22G\\x1b[G\\x1b[0J
? Whats your name? » foo
❯ foo
  bar
  baz\\x1b[3A\\x1b[22G\\x1b[G\\x1b[0J
? Whats your name? » foo
\\x1b[?25h\\x1b[?25hfoo
"
stderr:
""
`;

snapshot[`input prompt > should submit the typed value when completeOnSubmit is disabled 1`] = `
stdout:
"? Whats your name? » 
  foo
  bar
  baz\\x1b[3A\\x1b[22G\\x1b[G\\x1b[0J
? Whats your name? » foo
❯ foo
  bar
  baz\\x1b[3A\\x1b[22G\\x1b[G\\x1b[0J
? Whats your name? » 
\\x1b[?25h\\x1b[?25h
"
stderr:
""
`;

snapshot[`input prompt > should submit the typed value for inline suggestions by default 1`] = `
stdout:
"? Whats your name? » \\x1b[22G\\x1b[G\\x1b[0J
? Whats your name? » foo\\x1b[24G\\x1b[G\\x1b[0J
? Whats your name? » fo
\\x1b[?25h\\x1b[?25hfo
"
stderr:
""
`;

snapshot[`input prompt > should submit the typed value when no suggestion matches 1`] = `
stdout:
"? Whats your name? » 
  foo
  bar
  baz\\x1b[3A\\x1b[22G\\x1b[G\\x1b[0J
? Whats your name? » xyz\\x1b[25G\\x1b[G\\x1b[0J
? Whats your name? » xyz
\\x1b[?25h\\x1b[?25hxyz
"
stderr:
""
`;

snapshot[`input prompt > should submit the typed value after dismissing the suggestion with escape 1`] = `
stdout:
"? Whats your name? » 
  abbey
  abbot\\x1b[2A\\x1b[22G\\x1b[G\\x1b[0J
? Whats your name? » abbey
❯ abbey
  abbot\\x1b[2A\\x1b[24G\\x1b[G\\x1b[0J
? Whats your name? » ab
  abbey
  abbot\\x1b[2A\\x1b[24G\\x1b[G\\x1b[0J
? Whats your name? » ab
\\x1b[?25h\\x1b[?25hab
"
stderr:
""
`;

snapshot[`input prompt > should show the deselect hint in the info row while a suggestion is highlighted 1`] = `
stdout:
"? Whats your name? » 
  abbey
  abbot
ℹ 0/2 Next: ↑, Previous: ↓, Next Page: ⇞, Previous Page: ⇟, Complete: ⇥, Submit: ↵\\x1b[3A\\x1b[22G\\x1b[G\\x1b[0J
? Whats your name? » abbey
❯ abbey
  abbot
ℹ 1/2 Next: ↑, Previous: ↓, Next Page: ⇞, Previous Page: ⇟, Complete: ⇥, Deselect: escape, Submit: ↵\\x1b[3A\\x1b[24G\\x1b[G\\x1b[0J
? Whats your name? » ab
  abbey
  abbot
ℹ 0/2 Next: ↑, Previous: ↓, Next Page: ⇞, Previous Page: ⇟, Complete: ⇥, Submit: ↵\\x1b[3A\\x1b[24G\\x1b[G\\x1b[0J
? Whats your name? » ab
\\x1b[?25h\\x1b[?25hab
"
stderr:
""
`;

snapshot[`input prompt with prefix > should change prefix 1`] = `
stdout:
"PREFIX Whats your name? (foo) » \\x1b[33G\\x1b[G\\x1b[0J
PREFIX Whats your name? (foo) » bar\\x1b[36G\\x1b[G\\x1b[0J
PREFIX Whats your name? (foo) » bar
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`input prompt with writer set to stderr > should enter some text 1`] = `
stdout:
""
stderr:
"? Whats your name? (foo) » \\x1b[28G\\x1b[G\\x1b[0J
? Whats your name? (foo) » foo bar\\x1b[35G\\x1b[G\\x1b[0J
? Whats your name? (foo) » foo bar
\\x1b[?25h\\x1b[?25h"
`;

snapshot[`input prompt without prefix > should disable prefix 1`] = `
stdout:
"Whats your name? (foo) » \\x1b[26G\\x1b[G\\x1b[0J
Whats your name? (foo) » bar\\x1b[29G\\x1b[G\\x1b[0J
Whats your name? (foo) » bar
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`input prompt with no location flag > should work without --location flag 1`] = `
stdout:
"? Works without --location? (hope so) » \\x1b[41G\\x1b[G\\x1b[0J
? Works without --location? (hope so) » yes\\x1b[44G\\x1b[G\\x1b[0J
? Works without --location? (hope so) » yes
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`input prompt > should delete word to the left with ctrl+w 1`] = `
stdout:
"? Enter text » \\x1b[16G\\x1b[G\\x1b[0J
? Enter text » hello wo\\x1b[24G\\x1b[G\\x1b[0J
? Enter text » hello world\\x1b[27G\\x1b[G\\x1b[0J
? Enter text » hello \\x1b[22G\\x1b[G\\x1b[0J
? Enter text » hello
\\x1b[?25h\\x1b[?25hhello
"
stderr:
""
`;

snapshot[`input prompt > should delete word to the right with alt+d 1`] = `
stdout:
"? Enter text » \\x1b[16G\\x1b[G\\x1b[0J
? Enter text » foo bar\\x1b[23G\\x1b[G\\x1b[0J
? Enter text » foo bar\\x1b[20G\\x1b[G\\x1b[0J
? Enter text » foo bar\\x1b[16G\\x1b[G\\x1b[0J
? Enter text » bar\\x1b[16G\\x1b[G\\x1b[0J
? Enter text » bar
\\x1b[?25h\\x1b[?25hbar
"
stderr:
""
`;

snapshot[`input prompt > should move cursor one word left with alt+left 1`] = `
stdout:
"? Enter text » \\x1b[16G\\x1b[G\\x1b[0J
? Enter text » hello wo\\x1b[24G\\x1b[G\\x1b[0J
? Enter text » hello world\\x1b[27G\\x1b[G\\x1b[0J
? Enter text » hello world\\x1b[22G\\x1b[G\\x1b[0J
? Enter text » hello Xworld\\x1b[23G\\x1b[G\\x1b[0J
? Enter text » hello Xworld
\\x1b[?25h\\x1b[?25hhello Xworld
"
stderr:
""
`;

snapshot[`input prompt > should move cursor one word right with alt+right 1`] = `
stdout:
"? Enter text » \\x1b[16G\\x1b[G\\x1b[0J
? Enter text » foo\\x1b[19G\\x1b[G\\x1b[0J
? Enter text » foo\\x1b[16G\\x1b[G\\x1b[0J
? Enter text » foo\\x1b[19G\\x1b[G\\x1b[0J
? Enter text » fooX\\x1b[20G\\x1b[G\\x1b[0J
? Enter text » fooX
\\x1b[?25h\\x1b[?25hfooX
"
stderr:
""
`;
